use HandshakeCertificates in TlsEndpoint