@@ -10,6 +10,10 @@
 
 package jayo.tls.helpers;
 
+import jayo.tls.ClientHandshakeCertificates;
+import jayo.tls.ServerHandshakeCertificates;
+import jayo.tls.TlsVersion;
+
 import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManagerFactory;
@@ -20,27 +24,30 @@ import java.security.KeyStore;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-public class SslContextFactory {
-    public static final int tlsMaxDataSize = (int) Math.pow(2, 14);
-    public static final String certificateCommonName = "name"; // must match what's in the certificates
+public class CertificateFactory {
+    public static final int TLS_MAX_DATA_SIZE = (int) Math.pow(2, 14);
+    public static final String CERTIFICATE_COMMON_NAME = "name"; // must match what's in the certificates
 
-    private final String protocol;
+    private final TlsVersion version;
     private final SSLContext defaultContext;
+    private final TrustManagerFactory tmf;
+    private final KeyManagerFactory kmf;
     private final List<String> allCiphers;
 
-    public SslContextFactory(String protocol) {
-        this.protocol = protocol;
+    public CertificateFactory(TlsVersion version) {
+        this.version = version;
         try {
-            SSLContext sslContext = SSLContext.getInstance(protocol);
+            SSLContext sslContext = SSLContext.getInstance(version.getJavaName());
             KeyStore ks = KeyStore.getInstance("JKS");
             try (InputStream keystoreFile = getClass().getClassLoader().getResourceAsStream("keystore.jks")) {
-                ks.load(keystoreFile, "password".toCharArray());
-                TrustManagerFactory tmf = TrustManagerFactory.getInstance(TrustManagerFactory.getDefaultAlgorithm());
+                char[] password = "password".toCharArray();
+                ks.load(keystoreFile, password);
+                tmf = TrustManagerFactory.getInstance(TrustManagerFactory.getDefaultAlgorithm());
                 tmf.init(ks);
-                KeyManagerFactory kmf = KeyManagerFactory.getInstance(KeyManagerFactory.getDefaultAlgorithm());
-                kmf.init(ks, "password".toCharArray());
+                kmf = KeyManagerFactory.getInstance(KeyManagerFactory.getDefaultAlgorithm());
+                kmf.init(ks, password);
+
                 sslContext.init(kmf.getKeyManagers(), tmf.getTrustManagers(), null);
             }
             this.defaultContext = sslContext;
@@ -50,8 +57,16 @@ public class SslContextFactory {
         this.allCiphers = ciphers(defaultContext).stream().sorted().toList();
     }
 
-    public SslContextFactory() {
-        this("TLSv1.2");
+    public ServerHandshakeCertificates getServerHandshakeCertificates() {
+        return ServerHandshakeCertificates.create(kmf, null, version);
+    }
+
+    public ClientHandshakeCertificates getClientHandshakeCertificates() {
+        return ClientHandshakeCertificates.create(tmf, null, version);
+    }
+
+    public CertificateFactory() {
+        this(TlsVersion.TLS_1_2);
     }
 
     private List<String> ciphers(SSLContext ctx) {
@@ -74,17 +89,17 @@ public class SslContextFactory {
                                 "SSL_RSA_EXPORT_WITH_RC4_40_MD5")
                         .contains(c))
                 // No SHA-2 with TLS < 1.2
-                .filter(c -> Arrays.asList("TLSv1.2", "TLSv1.3").contains(protocol)
+                .filter(c -> Arrays.asList("TLSv1.2", "TLSv1.3").contains(version.getJavaName())
                         || !c.endsWith("_SHA256") && !c.endsWith("_SHA384"))
                 // Disable cipher only supported in TLS >= 1.3
-                .filter(c -> protocol.compareTo("TLSv1.3") > 0
+                .filter(c -> version.getJavaName().compareTo("TLSv1.3") > 0
                         || !Arrays.asList("TLS_AES_128_GCM_SHA256", "TLS_AES_256_GCM_SHA384")
                         .contains(c))
                 // https://bugs.openjdk.java.net/browse/JDK-8224997
                 .filter(c -> !c.endsWith("_CHACHA20_POLY1305_SHA256"))
                 // Anonymous ciphers are problematic because they are disabled in some VMs
                 .filter(c -> !c.contains("_anon_"))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public SSLContext getDefaultContext() {
